--- a/css/style.css
+++ b/css/style.css
@@ -1,304 +1,383 @@
-/*
-    1- Global-Style
-        1.1 - Header Section
-            1.1.1 - Form User
-            1.1.2 - Cart Popup
-            1.1.3 - Search Box Header
-            1.1.4 - DrobDown Menu
-
-        1.2 - Footer Section
-            1.2.1- Down-Footer
-        1.3 - Icon Chat 
-            1.3.1 - Popup - Chat
-
-    2- Hover-Effects
-
-    3- Home-Page
-        3.2 - Exampales Section (Photo - video)
-        3.3 - Videos Section
-            3.3.1 - Trusted Section
-        3.4 - Pricing Section
-            3.4.1 - Said Abuot us ( Testmonial)
-    
-*/
-
-/* 1-  Global Style */
-
-
-a {
-    text-decoration: none;
+/* Global Style --------------*/
+body {
+    font-family: 'Lora', serif;
+    text-transform: capitalize
 }
 
-ul,
-ol {
-    list-style: none;
-}
-
-input,
-button {
-    outline: none !important;
-    border: none;
-}
-/*------------------------------------------------
- 1.1 - Header Section */
-header {
-    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
-        url("../images/header/Asset\ 4.png") no-repeat;
-    background-size: cover;
-    position: relative;
-}
-header .logo img {
-    width: 100px;
-}
-header nav .nav-link {
-    color: #fff !important;
-}
-.header-icons li {
-    display: inline-block;
-}
-
-.header-icons li > i,
-.header-icons .form-user-nav .user-form i.fa-user {
-    width: 40px;
-    height: 40px;
-    color: #fff;
-    font-size: 20px;
+/* Toggler Icons -------*/
+.icons-bar-toggel{
+    width: 60px;
+    padding: 10px;
+    position: fixed;
+    border-radius: 10px;
+    z-index: 10;
     cursor: pointer;
+    top: 15px;
+    left: 10px;
 }
-
-.header-icons li > i.fa-user,
-.header-icons .form-user-nav .user-form i.fa-user {
-    background-color: #fff;
-    color: #000;
-    border-radius: 50%;
-    line-height: 40px;
-    position: relative;
+@media(max-width: 992px){
+    .icons-bar-toggel{
+        width: 45px;
+    }
 }
-/* -------------------------------------------
-1.1.1 - Form User */
-.header-icons .form-user-nav .user-form {
-    position: absolute;
-    z-index: 2;
-    background-color: #fff;
-    left: -80px;
-    top: 55px;
-    padding: 20px;
-    text-align: left;
-    display: none;
-}
-.header-icons .form-user-nav .user-form::before,
-.search-box-header .categories-menu .drobdwon::before {
-    content: "";
-    position: absolute;
-    border-width: 20px;
-    border-style: solid;
-    border-color: transparent transparent #fff transparent;
-}
-.header-icons .form-user-nav .user-form::before {
-    top: -30px;
-    right: 23%;
-}
-.header-icons .form-user-nav .user-form i.fa-user {
-    background-color: #e2e2e2;
-    text-align: center;
-}
-.list-user-form-nav li {
-    padding: 10px 0;
+.icons-bar-toggel span{
+    height: 4px;
+    width: 100%;
+    background: #000;
+    z-index: 10;
     display: block;
+    transition: all .3s ease-in;
 }
-.list-user-form-nav li:last-child {
-    border-top: 1px solid #e6e5e5;
+.icons-bar-toggel span:not(:first-child){
+    margin-top: 10px;
 }
-.list-user-form-nav li a {
-    color: #000;
-}
-
-/*----------------------------------------
-1.1.2 - Cart Popup */
-.pernt-popup {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
-    display: none;
-}
-.pernt-popup .title-popup {
-    margin: 0 20px;
-    font-size: 35px;
+.icons-bar-toggel .trns:first-child{
+    transform: rotate(-40deg) translate(-8px,10px);
     background: #fff;
 }
-.pop-up-cart {
-    position: absolute;
-    left: 50%;
-    top: 10%;
-    transform: translate(-50%, 0);
-    background-color: #fff;
-    z-index: 5;
-    padding: 20px 30px;
-    width: 75%;
+.icons-bar-toggel .trns:nth-child(2){
+    opacity: 0
 }
-
-.box-cart{
-    background-color: #fff;
-    border-right: 10px solid #e2e2e2;
-    padding-right: 15px;
+.icons-bar-toggel .trns:last-child{
+    transform: rotate(40deg) translate(-9px,-11px);
+    background: #fff;
 }
-.pop-up-cart .box-cart-imges {
-    border: 1px solid #999;
-    border-radius: 5px;
-    padding: 10px;
-    position: relative;
+/* blocks sectios -----*/
+.block{
+    display: block;
 }
-.pop-up-cart .box-cart-imges img {
+.about,
+.porto,
+.contact{
+    display: none;
+}
+/* Heading sectios -----*/
+.title_section{
+    font-size: 2.6em;
+    color: #4B77BE;
+    letter-spacing: 3px;
+}
+.title_section::after{
+    content: "";
     height: 100%;
+    width: 80px;
+    border: 2px solid #4B77BE;
+    display: block;
+    margin: 10px auto 0;
 }
-.pop-up-cart .bolder {
-    font-weight: bold;
-}
-.pop-up-cart .enhaced-cart {
-    display: inline-block;
-}
-.pop-up-cart  .box-cart-imges .fa-window-close,
-.close-popup-cart {
-    position: absolute;
-    top: 5px;
-    right: 15px;
-    cursor: pointer;
-}
-.pop-up-cart .edit-cart {
-    position: absolute;
-    top: 50%;
-    right: 15px;
-    color: #d1196f;
-}
-.how-cart {
-    border-radius: 50%;
-    border: 1px solid #e6e5e5;
-    width: 25px;
-    height: 25px;
-}
-.prici-cart{
-    font-size: 20px;
-    background-color: #fff;
-}
-.prici-cart .total-prici-cart{
-    padding: 30px 0;
-}
-.prici-cart .total-prici-cart p{
-    color: #999;
-    line-height: 2;
-}
-.prici-cart .total-prici-cart span{
-    font-size: 30px
-}
+/* Bottuns sectios -----*/
 .btns{
-    padding: 15px 20px;
-    text-align: center;
+    padding: 5px 15px ;
+    outline: none !important;
+    border: 1px solid #4B77BE;
+    font-size: 1.5em;
     color: #fff;
-    background-color: #a2d13a;
-    width: 90%;
+    background: #4B77BE;
+    margin: 30px auto 0;
+    transition: all .3s ease-in;
+    border-radius: 10px;
 }
-.close-popup-cart{
-    font-size: 20px;
-    top: 30px;
-    right: 30px;
+.btns:hover{
+    color: #4B77BE;
+    background: #fff;
 }
-/*-----------------------------------------------
-1.1.2 Search Box Header  */
-.search-box-header {
-    background-color: #fff;
-    width: 90%;
-    position: relative;
-}
-@media (max-width: 767px) {
-    .search-box-header {
-        width: 100%;
-    }
-}
-.search-box-header .line-search {
-    padding: 0 10px;
-    text-align: center;
-}
-.search-box-header .npt-box {
-    border: none;
-    border-left: 2px solid #e6e5e5;
-}
-@media (max-width: 767px) {
-    .search-box-header .npt-box {
-        width: 70%;
-    }
-}
-.search-box-header .npt-box::placeholder {
-    color: #999;
-}
-.search-box-header .categories-menu {
-    cursor: pointer;
-    border-left: 2px solid #e6e5e5;
-    position: relative;
-}
-
-/*----------------------------------------------------------
-1.1.3 - DrobDown Menu */
-
-.search-box-header .categories-menu .drobdwon {
+/*Overlay -------*/
+.overlay {
     position: absolute;
-    background-color: #fff;
-    top: 80px;
-    left: -30px;
-    padding: 30px;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 40px;
+    width: 100%;
+    height: 100%;
+    background: #000;
     opacity: 0;
-    visibility: hidden;
-    transform: scale(0);
-    transition: transform 0.3s, visibility 0.3s;
+    display: block;
+    top: 0;
+    left: 0;
+    bottom:0;
+    transition: all .3s ease-in;
+    cursor: pointer;
     z-index: 2;
 }
-.search-box-header .categories-menu .drobdwon ul {
-    padding: 0;
-}
-.search-box-header .categories-menu .drobdwon::before {
-    top: -35px;
-    left: 45%;
-    transform: translate(-50%, 0);
+.overlay .over_title{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+    z-index: 3;
+    text-align: center
 }
 
-.search-box-header .categories-menu:hover .drobdwon {
-    opacity: 1;
-    visibility: visible;
-    transform: scale(1);
+.overlay .over_title h3{
+    font-size: 25px
 }
-.search-box-header .icon-search i {
-    position: absolute;
-    display: block;
-    top: -5px;
-    right: 15px;
-    background: #a2d13a;
-    color: #fff;
-    width: 100px;
-    height: 85px;
-    line-height: 45px;
+/* End Global ---------*/
+/* Start Nav -----------*/
+nav {
+    background-color: #000;
+    padding: 30px;
     text-align: center;
+    z-index: 8;
+    display: none;
+    height: 100vh;
+    position: fixed !important;
+    opacity: .8;
 }
-@media (max-width: 929px) {
-    .search-box-header .icon-search i {
-        position: relative;
-        background: #a2d13a;
-        color: #fff;
-        text-align: center;
-        width: 100%;
-        top: 0;
-        left: 0;
+nav ul{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+nav ul li{
+    padding: 10px 0
+}
+nav ul li a {
+    color: #fff;
+    font-size: 1.5em;
+    transition: all .3 ease-in
+}
+nav ul li:hover a{
+    color:#4B77BE;
+    text-decoration: none
+}
+
+nav .sochil i{
+    margin: 0 5px;
+    transition: all .3s ease-in;
+    cursor: pointer;
+    color: #e4e1e1;
+    font-size: 2em
+}
+@media(max-width: 992px){
+    nav ul li{
+        padding: 5px 0
+    }
+    nav ul li a {
+        font-size: .8em;
+    }
+    nav .sochil i{
+        margin: 10px 5px;
+        font-size: 1em
     }
 }
-.search-box-header .special {
-    background-color: #d1196f;
+nav .sochil i.fa-facebook:hover{
+    color: #213e97;
+}
+nav .sochil i.fa-github:hover{
+    color: #333;
+}
+nav .sochil i.fa-twitter:hover{
+    color: #1da1f2;
+}
+nav .sochil i.fa-linkedin:hover{
+    color: #0077b5;
+}
+nav .copy p{
     color: #fff;
-    height: 100%;
+    font-size: 1.3em;
+    width: 100%;
+    padding: 0 5px
 }
-.search-box-header .special span {
+
+@media(max-width: 992px){
+    nav .copy p{
+        font-size: .8em;
+    }
+}
+/* End Nav -----------*/
+/* Start Header -----------*/
+header {
+    background: url('../images/header/undraw_code_review_l1q9.svg') no-repeat center ,linear-gradient(rgba(75, 119, 190, .8), rgba(75, 119, 190, .9));
+    background-size: contain;
+    height: 100vh
+}
+header .box_desc img{
+    width: 150px;
+}
+@media(max-width: 992px){
+    header .box_desc img{
+        width: 60px;
+    }
+}
+header h1{
+    font-size: 2.7em;
+    color: #fff;
+}
+@media(max-width: 992px){
+    header .title_box  h1{
+        font-size: 1.6em
+    }
+}
+header .title_box {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    color: #FFF
+}
+/* End Header -----------*/
+/* Start About Me --------*/
+.about img:first-child{
+    width: 100%;
+}
+@media(max-width: 992px){
+    .about img:first-child{
+        width: 150px;
+    }
+}
+.about .title_desc_about{
+    letter-spacing: 1px;
+    color: #4B77BE;
+}
+.about .desc_about .cd-headline{
+    font-size: 21px !important
+}
+.about .desc_about .about_box_desc h2{
+    display: inline-block;
+    letter-spacing: 1px;
+    color: #4B77BE;
+    font-weight: bold
+}
+.about .desc_about .about_box_desc span{
+    font-size: 1.4em;
+}
+.about .skills .skills_prog {
+    position: relative;
+    margin: 20px 0 
+}
+.about .skills .skills_prog h2{
+    color: #4B77BE
+}
+.about .skills .skills_prog .progress{
+    margin: 10px 0;
+}
+
+.about .skills .skills_prog .progress .progress-bar{
+    background: #4B77BE !important
+}
+.about .skills .skills_prog .progress span{
+    position: absolute;
+    font-size: 16px;
+    color: #4B77BE;
+    right: 0;
+    top: 0;
+    z-index: 10;
+}
+.about .skills .skills_prog .progress span::after{
+    content: "";
+    position: absolute;
     display: block;
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 10px 10px 10px 10px;
+    border-color: #4B77BE transparent transparent;
+    left: 5px;
+    bottom: -20;
 }
+/* End About Me -----------*/
+/* Start Portoflio -------*/
+.porto .porto_box{
+    position: relative;
+    margin: 10px 0;
+    box-shadow: 5px 5px 10px #000;
+}
+.porto_box:hover .overlay{
+    opacity: .8
+}
+
+.porto_box:hover .overlay .over_title h3{
+    opacity: 1;
+    z-index: 4;
+}
+.porto .popup{
+    background: rgba(0, 0, 0, .8);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    display: none;
+}
+.porto .popup .ineer-popup {
+    width: 700px;
+    z-index: 3;
+    position: fixed;
+    left: 50%;
+    top:50%;
+    transform: translate(-50%, -50%)
+}
+@media(max-width: 992px){
+    .porto .popup .ineer-popup {
+        width: 90%;
+    }
+}
+.porto .popup .ineer-popup  img{
+    width: 100%;
+}
+.porto .popup .ineer-popup .box{
+    position: relative;
+    text-align: center;
+    background: transparent;
+    display: flex
+}
+.porto .popup .ineer-popup .btn-popup{
+    font-size: 20px;
+    color: #fff;
+    letter-spacing: 3px;
+    text-decoration: none;
+    width: 50%;
+}
+.porto .popup .ineer-popup .btn-popup:nth-child(1){
+    margin-right: 10px
+}
+@media(max-width: 992px){
+    .porto .popup .ineer-popup .btn-popup{
+        font-size: 16px;
+    }
+}
+.porto .popup .ineer-popup .btn-popup:hover{
+    background-color: transparent;
+    border: 1px solid #fff;
+}
+/* End Portoflio -------*/
+/* Start Contact -------*/
+.contact {
+    margin-top: 150px;
+}
+.contact form input{
+    width: 100%;
+    margin-top: 30px;
+    padding: 15px 10px;
+    border: none;
+    border-bottom: 2px solid #e2e2e2;
+    outline: none;
+}
+.contact form input:focus,
+.contact form textarea:focus{
+    box-shadow: 3px 0 5px 5px #e2e2e2
+}
+.contact form input::placeholder,
+.contact form textarea::placeholder{
+    color: #999
+}
+.contact form textarea{
+    width: 100%;
+    border: none;
+    border-bottom: 2px solid #e2e2e2;
+    outline: none;
+    margin-top: 30px;
+    padding: 15px 10px;
+    max-width: 100%;
+    max-height: 227px
+}
+@media(max-width: 992px){
+    .contact form textarea,
+    .contact form input:not(:first-child){
+        margin-top: 20px;
+    }
+    .contact{
+        margin-top: 0
+    }
+}
+/* End Contact -------*/
