--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,9 @@
 */
 
 /* 1-  Global Style */
-
+body {
+    text-transform: capitalize;
+}
 a {
     text-decoration: none;
 }
@@ -134,7 +136,7 @@ header nav .nav-link:hover::before {
     text-align: left;
     display: none;
 }
-.list-user-form-nav{
+.list-user-form-nav {
     padding: 0;
 }
 .header-icons .form-user-nav .user-form::before,
@@ -157,137 +159,27 @@ header nav .nav-link:hover::before {
     padding: 15px 10px;
     display: block;
 }
-.list-user-form-nav li:hover{
+.list-user-form-nav li:hover {
     background-color: #e6e6e6;
 }
 .list-user-form-nav li:last-child {
     border-top: 1px solid #e6e5e5;
 }
-.list-user-form-nav li img{
+.list-user-form-nav li img {
     padding: 0 10px;
 }
 .list-user-form-nav li a {
     color: #000;
 }
-@media(max-width: 767px){
-    .header-icons .form-user-nav .user-form{
-        left: 0
-    }
-    .header-icons .form-user-nav .user-form::before{
-        right: 32%
-    }
-    .title-user-form{
-        font-size: 20px
-    }
-}
-
-/*----------------------------------------
-1.1.2 - Cart Popup */
-.pernt-popup {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
-    display: none;
-}
-.pernt-popup .title-popup {
-    margin: 0 20px;
-    font-size: 35px;
-    background: #fff;
-}
-.pop-up-cart {
-    position: absolute;
-    left: 50%;
-    top: 10%;
-    transform: translate(-50%, 0);
-    background-color: #fff;
-    z-index: 5;
-    padding: 20px 30px;
-    width: 75%;
-}
-
-.box-cart {
-    background-color: #fff;
-    border-right: 10px solid #e2e2e2;
-    padding-right: 15px;
-}
-.pop-up-cart .box-cart-imges {
-    border: 1px solid #999;
-    border-radius: 5px;
-    padding: 10px;
-    position: relative;
-}
-.pop-up-cart .box-cart-imges img {
-    height: 100%;
-}
-
-.pop-up-cart .enhaced-cart {
-    display: inline-block;
-}
-.pop-up-cart .box-cart-imges .fa-times,
-.close-popup-cart {
-    position: absolute;
-    top: 5px;
-    right: 15px;
-    cursor: pointer;
-    border-radius: 50%;
-    background-color: #e2e2e2;
-    width: 30px;
-    height: 30px;
-    line-height: 30px;
-    text-align: center;
-}
-.pop-up-cart .edit-cart {
-    position: absolute;
-    top: 50%;
-    right: 15px;
-    color: #d1196f;
-}
-.how-cart {
-    border-radius: 50%;
-    border: 1px solid #e6e5e5;
-    width: 25px;
-    height: 25px;
-}
-.prici-cart {
-    font-size: 20px;
-    background-color: #fff;
-}
-.prici-cart .total-prici-cart {
-    padding: 30px 0;
-}
-.prici-cart .total-prici-cart p {
-    color: #999;
-    line-height: 2;
-}
-.prici-cart .total-prici-cart span {
-    font-size: 30px;
-}
-.btns {
-    padding: 15px 20px;
-    text-align: center;
-    color: #fff;
-    background-color: #a2d13a;
-    width: 90%;
-}
-.close-popup-cart {
-    font-size: 20px;
-    top: 30px;
-    right: 30px;
-}
-
 @media (max-width: 767px) {
-    .box-cart {
-        border: none;
-        padding: 0;
+    .header-icons .form-user-nav .user-form {
+        left: 0;
     }
-    .pop-up-cart{
-        width: 90%
+    .header-icons .form-user-nav .user-form::before {
+        right: 32%;
     }
-    .imag-name-cart{
-        margin-top: 15px;
+    .title-user-form {
+        font-size: 20px;
     }
 }
 /*-----------------------------------------------
@@ -424,8 +316,8 @@ header nav .nav-link:hover::before {
     visibility: visible;
     transform: scale(1);
 }
-@media(max-width: 767px) {
-    .search-box-header .categories-menu .drobdwon{
+@media (max-width: 767px) {
+    .search-box-header .categories-menu .drobdwon {
         left: 5px;
         top: 60px;
         z-index: 3;
@@ -434,25 +326,25 @@ header nav .nav-link:hover::before {
 /* --------------------------------------
 3.2 - Exampales Section (Photo - video)
 */
-.examples .title-examples p {
+.title-examples p {
     position: relative;
     left: 20px;
     color: #999;
 }
-.examples .title-examples p::before {
+.title-examples p::before {
     content: "-";
     color: #96ccd2;
     position: absolute;
     left: -15px;
 }
-.examples .btn-vid-pho button {
+.btn-vid-pho button {
     background-color: #f5f5f5;
     width: 100px;
     text-align: right;
     position: relative;
     border-radius: 2px;
 }
-.examples .btn-vid-pho button::after {
+.btn-vid-pho button::after {
     content: "";
     position: absolute;
     display: block;
@@ -464,15 +356,15 @@ header nav .nav-link:hover::before {
     background-color: #96ccd2;
     transition: width 0.3s;
 }
-.examples .btn-vid-pho button:hover::after {
+.btn-vid-pho button:hover::after {
     width: 60%;
 }
-.examples .btn-vid-pho button:nth-child(1)::before {
+.btn-vid-pho button:nth-child(1)::before {
     position: absolute;
     content: url("../images/example/Group 541.png");
     left: 10px;
 }
-.examples .btn-vid-pho button:nth-child(2)::before {
+.btn-vid-pho button:nth-child(2)::before {
     position: absolute;
     content: url("../images/example/Group 542.png");
     left: 10px;
@@ -884,8 +776,8 @@ Slick Slider */
 .slick-slider {
     top: -80px;
 }
-.fa-angle-left,
-.fa-angle-right {
+.said-about .fa-angle-left,
+.said-about .fa-angle-right {
     position: absolute;
     transform: translate(-50%, -50%);
     bottom: -5px;
@@ -912,10 +804,10 @@ Slick Slider */
         padding-bottom: 68px;
         margin-top: -29px;
     }
-    .said-about .title-said-about .head-title-said{
+    .said-about .title-said-about .head-title-said {
         font-size: 20px;
     }
-    .said-about .title-said-about p{
+    .said-about .title-said-about p {
         font-size: 14px;
     }
     .said-about .said-testmonial .testmonial-box {
@@ -923,7 +815,7 @@ Slick Slider */
     }
     .test-bost,
     .num-user,
-    .hour{
+    .hour {
         font-size: 12px;
     }
     .fa-angle-left,
@@ -1002,20 +894,488 @@ footer .mosaic-foot ul {
 .coby-right .social-copy .fa-basketball-ball {
     background: #d1196f;
 }
-@media(max-width: 767px){
-    .coby-righ{
+@media (max-width: 767px) {
+    .coby-righ {
         text-align: center !important;
     }
-    .coby-right .social-copy{
+    .coby-right .social-copy {
         margin: 10px 0;
-        text-align: center
+        text-align: center;
     }
-    .coby-right .social-copy i{
+    .coby-right .social-copy i {
         display: block;
         margin: 5px auto;
     }
     .coby-right .social-copy span,
-    .coby-right .all-right{
+    .coby-right .all-right {
         font-size: 14px;
     }
 }
+/* -----------------------------------------------
+ End Home Page*/
+
+/*-------------------------------------------------
+ Start Page-404 */
+.page-404 .content-page-404 .icon-page-404 i {
+    font-size: 120px;
+    transform: rotate(40deg);
+    color: #3b5998;
+}
+.page-404 .content-page-404 .title-page-404 {
+    font-size: 50px;
+    font-weight: normal;
+    margin-top: 0;
+}
+.page-404 .content-page-404 .desc-page-404 p {
+    color: #999;
+    margin-bottom: 0;
+    font-size: 20px;
+}
+.page-404 .content-page-404 .desc-page-404 a {
+    color: #c9236d;
+    font-weight: bold;
+    text-decoration-color: #c9236d;
+    text-decoration-line: underline;
+}
+.page-404 .content-page-404 .desc-page-404 button {
+    background-color: #27405b;
+    color: #fff;
+    padding: 15px 30px;
+}
+/*-----------------------------------------
+ End Page-404 */
+
+/*------------------------------------
+ Start-Question-Page */
+.question-page .head-question-page h1 {
+    font-size: 40px;
+}
+.question-page .head-question-page input:focus {
+    border: 1px solid #e2e2e2;
+    box-shadow: 2px 2px 5px 1px #e2e2e2;
+    outline: none;
+}
+.question-page ul li {
+    margin: 15px 0;
+}
+.question-page .box-question {
+    text-align: center;
+    padding: 15px 10px;
+    border: 1px solid #999;
+    border-radius: 5px;
+}
+.question-page .box-question.active-question {
+    background-color: #e6e6e6;
+    box-shadow: 2px 2px 5px 1px #e2e2e2;
+}
+.question-page ul li .plus-toggle,
+.question-page ul li .nigt-toggle {
+    font-size: 20px;
+}
+.question-page ul li span {
+    display: inline-block;
+    color: #000;
+    font-weight: bold;
+    cursor: pointer;
+    margin: 0 auto;
+}
+.question-page .desc-box-question,
+.question-page ul li .nigt-toggle {
+    display: none;
+}
+/*------------------------------------
+ End-Question-Page */
+
+/* ----------------------------------------
+Start Contact-page */
+
+.contact-page .info div {
+    margin: 10px 0;
+}
+.contact-page .info div i {
+    margin-right: 15px;
+    color: #3b5998;
+    font-size: 20px;
+    text-align: center;
+}
+.contact-page .info div:last-child {
+    position: relative;
+    padding-left: 40px;
+}
+.contact-page .info div:last-child i {
+    position: absolute;
+    top: 10px;
+    left: 5px;
+    color: #a2d13a;
+}
+.contact-page .info div p {
+    display: inline-block;
+    color: #999;
+}
+.contact-page .coll-me .coll-me-box {
+    background: #f8f6f7;
+    padding: 20px 15px;
+    text-align: center;
+    min-height: 140px;
+}
+.contact-page .coll-me .coll-me-box img {
+    display: block;
+    margin: 10px auto;
+    min-height: 60px;
+}
+.contact-page .form-contact-page input,
+.contact-page .form-contact-page textarea {
+    width: 100%;
+    margin: 10px 0;
+    padding: 10px 20px;
+    background-color: #fafafa;
+    border: 1px solid #e2e2e2;
+}
+.contact-page .form-contact-page textarea {
+    max-height: 300px;
+}
+.contact-page .form-contact-page .form-contact-box {
+    display: inline-block;
+    width: 49%;
+    position: relative;
+}
+.contact-page .form-contact-page .form-contact-box i {
+    position: absolute;
+    right: 15px;
+    top: 16px;
+    color: #000;
+    font-size: 18px;
+    transition: color 0.3s;
+}
+.contact-page .form-contact-page .form-contact-box button {
+    width: 100%;
+    text-align: left;
+    padding: 15px 20px;
+    background-color: #fafafa;
+    transition: color 0.3s, background-color 0.3s;
+}
+.contact-page .form-contact-page .form-contact-box button:hover {
+    background-color: #c9236d;
+    color: #fff;
+    box-shadow: 0 2px 3px 0 #c9236d;
+}
+.contact-page .form-contact-box:hover i {
+    color: #fff;
+}
+/* ----------------------------------------
+End Contact-Page */
+
+/* ----------------------------------------
+Start Resarch-Page*/
+.resarch-page .border-col {
+    border-right: 1px solid #e6e6e6;
+}
+.resarch-page .seacrh-img-video > .fa-times {
+    border-radius: 50%;
+    background-color: #e6e6e6;
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+    color: #3b5998;
+}
+.resarch-page .seacrh-img-video .type-images {
+    position: relative;
+}
+.resarch-page .seacrh-img-video .type-images > i {
+    position: absolute;
+    top: -2px;
+    right: 12px;
+    font-size: 19px;
+    color: #a3a2a2;
+}
+.resarch-page .seacrh-img-video .type-images .list-content-type {
+    padding: 0;
+    margin-top: 30px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 10px;
+}
+.resarch-page .seacrh-img-video .type-images .list-content-type li {
+    background-color: #e6e6e6;
+    padding: 5px 10px;
+}
+.resarch-page .seacrh-img-video .type-images .list-content-type li a {
+    color: #000;
+}
+.list-color-research-page {
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    grid-gap: 1px;
+}
+.list-color-research-page li{
+    position: relative;
+    cursor: pointer;
+    height: 30px;
+    width: 30px;
+}
+.list-color-research-page li i{
+    position: absolute;
+    top: 0;
+    display: none;
+    cursor: pointer;
+}
+.list-color-research-page li span{
+    display: block;
+    width: 20px;
+    height: 20px;
+}
+.list-color-research-page li:nth-child(1) i{
+    position: absolute;
+    display: block ;
+    border: 5px solid #e6e6e6;
+}
+.list-color-research-page li:nth-child(2) span{
+    background-color: #000;
+}
+.list-color-research-page li:nth-child(3) span{
+    background-color: #e72525;
+}
+.list-color-research-page li:nth-child(4) span{
+    background-color: #f48700;
+}
+.list-color-research-page li:nth-child(5) span{
+    background-color: #eca71d;
+}
+.list-color-research-page li:nth-child(6) span{
+    background-color: #f1f129;
+}
+.list-color-research-page li:nth-child(7) span{
+    background-color: #a9e418;
+}
+.list-color-research-page li:nth-child(8) span{
+    background-color: #06d506;
+}
+.list-color-research-page li:nth-child(9) span{
+    background-color: #0ecb9b;
+}
+.list-color-research-page li:nth-child(10) span{
+    background-color: #1ae0e0;
+}
+.list-color-research-page li:nth-child(11) span{
+    background-color: #1f55f8;
+}
+.list-color-research-page li:nth-child(12) span{
+    background-color: #0000ff;
+}
+.list-color-research-page li:nth-child(13) span{
+    background-color: #7f00ff;
+}
+.list-color-research-page li:nth-child(14) span{
+    background-color: #bf00ff;
+}
+.list-color-research-page li:nth-child(15) span{
+    background-color: #ea06b1;
+}
+.list-color-research-page li:nth-child(16) span{
+    background-color: #0bbbf5;
+}
+.list-color-research-page li:hover i{
+    display: block ;
+    border: 5px solid #e6e6e6;
+}
+.list-color-research-page li:hover span{
+    display: none;
+}
+.parent-box-reseacrh-page {
+    position: relative;
+}
+.resarch-page .list-resrearch li {
+    display: inline-block;
+    margin: 0 5px;
+    padding: 5px 10px;
+    border: 1px solid #e6e6e6;
+    border-radius: 5px;
+    text-align: center;
+}
+.resarch-page .list-resrearch li a {
+    color: #999;
+    font-weight: normal;
+}
+.resarch-page .box-images-research {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 5px;
+}
+.resarch-page .box-images-research .images-research img {
+    height: 100%;
+    width: 100%;
+}
+.resarch-page .num-page {
+    position: absolute;
+    width: 100%;
+    bottom: 10px;
+}
+.resarch-page .num-page .link-next a {
+    font-style: italic;
+    border: 1px solid #e6e6e6;
+    padding: 10px 20px;
+    display: block;
+    width: 100px;
+    color: #3b5998;
+    margin: auto;
+}
+.resarch-page .num-page .num-arrwo {
+    padding: 10px 20px;
+}
+.resarch-page .num-page .num-arrwo i {
+    padding: 10px;
+    background-color: #ebebeb;
+    margin: 0 30px;
+    color: #999;
+}
+.resarch-page .num-page .num-arrwo .num-page-research {
+    border: 1px solid #e6e6e6;
+    padding: 5px 15px;
+}
+
+@media(max-width: 767px){
+    .resarch-page .border-col{
+        border-right: none;
+    }
+    .resarch-page .list-resrearch li {
+        width: 65px;
+        margin: 5px 0;
+    }
+    .btn-vid-pho button{
+        margin-top: 5px;
+    }
+    .parent-box-reseacrh-page{
+        padding-bottom: 100px !important;
+    }
+    .resarch-page .num-page {
+        width: 80%;
+        bottom: 10px;
+    }
+    .resarch-page .num-page .link-next a {
+        display: inline-block;
+        width: auto;
+        margin: 0;
+        padding: 5px 10px;
+    }
+    .resarch-page .num-page .num-arrwo{
+        text-align: right;
+    }
+    .resarch-page .num-page .num-arrwo i {
+        padding: 5px;
+        margin: 0 10px;
+    }
+}
+/* ----------------------------------------
+End Resarch-Page*/
+
+/*----------------------------------------
+Start Cart Popup - Page*/
+.pernt-popup {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
+    display: block;
+}
+.pernt-popup .title-popup {
+    margin: 0 20px;
+    font-size: 35px;
+    background: #fff;
+}
+.pop-up-cart {
+    position: absolute;
+    left: 50%;
+    top: 10%;
+    transform: translate(-50%, 0);
+    background-color: #fff;
+    z-index: 5;
+    padding: 20px 30px;
+    width: 75%;
+}
+
+.box-cart {
+    background-color: #fff;
+    border-right: 10px solid #e2e2e2;
+    padding-right: 15px;
+}
+.pop-up-cart .box-cart-imges {
+    border: 1px solid #999;
+    border-radius: 5px;
+    padding: 10px;
+    position: relative;
+}
+.pop-up-cart .box-cart-imges img {
+    height: 100%;
+}
+
+.pop-up-cart .enhaced-cart {
+    display: inline-block;
+}
+.pop-up-cart .box-cart-imges .fa-times,
+.close-popup-cart {
+    position: absolute;
+    top: 5px;
+    right: 15px;
+    cursor: pointer;
+    border-radius: 50%;
+    background-color: #e2e2e2;
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+    text-align: center;
+}
+.pop-up-cart .edit-cart {
+    position: absolute;
+    top: 50%;
+    right: 15px;
+    color: #d1196f;
+}
+.how-cart {
+    border-radius: 50%;
+    border: 1px solid #e6e5e5;
+    width: 25px;
+    height: 25px;
+}
+.prici-cart {
+    font-size: 20px;
+    background-color: #fff;
+}
+.prici-cart .total-prici-cart {
+    padding: 30px 0;
+}
+.prici-cart .total-prici-cart p {
+    color: #999;
+    line-height: 2;
+}
+.prici-cart .total-prici-cart span {
+    font-size: 30px;
+}
+.btns {
+    padding: 15px 20px;
+    text-align: center;
+    color: #fff;
+    background-color: #a2d13a;
+    width: 90%;
+}
+.close-popup-cart {
+    font-size: 20px;
+    top: 30px;
+    right: 30px;
+}
+
+@media (max-width: 767px) {
+    .box-cart {
+        border-left: none;
+        padding: 0;
+    }
+    .pop-up-cart {
+        width: 90%;
+    }
+    .imag-name-cart {
+        margin-top: 15px;
+    }
+}
+/*----------------------------------------
+End Cart Popup - Page*/
